Ajout du module offre avec les types des offres et la liste des offres dans la home page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,3 +19,19 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+/*h1, h2, h3, h4, h5, h6 {
+    text-wrap: balance;
+}*/
+
+.balance {
+    text-wrap: balance;
+}
+
+.pagination {
+    margin-bottom: 0;
+}
+
+#delete-button {
+    border-radius: 0 0.25rem 0.25rem 0;
+}
